base/spark-history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history
  namespace: spark
  labels:
    app.kubernetes.io/name: spark-history
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spark-history
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark-history
    spec:
      serviceAccountName: spark-sa
      securityContext:
        fsGroup: 185
      containers:
        - name: spark-history
          image: apache/spark:3.5.5
          imagePullPolicy: IfNotPresent
          command:
            - /opt/spark/bin/spark-class
            - org.apache.spark.deploy.history.HistoryServer
          ports:
            - name: history-ui
              containerPort: 18080
          volumeMounts:
            - name: spark-events
              mountPath: /opt/spark/spark-events
          readinessProbe:
            httpGet:
              path: /
              port: 18080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 18080
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: spark-events
          persistentVolumeClaim:
            claimName: spark-events-pvc
