base/spark-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: spark
  labels:
    app.kubernetes.io/name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: spark-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark-worker
    spec:
      serviceAccountName: spark-sa
      securityContext:
        fsGroup: 185
      containers:
        - name: spark-worker
          image: apache/spark:4.0.2
          imagePullPolicy: IfNotPresent
          command:
            - /opt/spark/bin/spark-class
            - org.apache.spark.deploy.worker.Worker
            - spark://spark-master.spark.svc.cluster.local:7077
          ports:
            - name: worker-ui
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
