base/airflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  namespace: spark
  labels:
    app.kubernetes.io/name: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: airflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: airflow
    spec:
      serviceAccountName: spark-sa
      securityContext:
        fsGroup: 50000
      containers:
        - name: airflow
          image: apache/airflow:2.10.5-python3.11
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -c
            - |
              pip install pyspark==4.0.2
              airflow standalone
          ports:
            - containerPort: 8080
              name: airflow-ui
          volumeMounts:
            - name: airflow-logs
              mountPath: /opt/airflow/logs
            - name: spark-events
              mountPath: /opt/spark/spark-events
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 4Gi
      volumes:
        - name: airflow-logs
          persistentVolumeClaim:
            claimName: airflow-logs-pvc
        - name: spark-events
          persistentVolumeClaim:
            claimName: spark-events-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: airflow
  namespace: spark
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: airflow
  ports:
    - name: airflow-ui
      port: 8080
      targetPort: airflow-ui
