base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: spark
  labels:
    app.kubernetes.io/name: spark-master
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: spark-master
  ports:
    - name: master-rpc
      port: 7077
      targetPort: 7077
    - name: master-ui
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-ui
  namespace: spark
  labels:
    app.kubernetes.io/name: spark-worker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: spark-worker
  ports:
    - name: worker-ui
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history
  namespace: spark
  labels:
    app.kubernetes.io/name: spark-history
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: spark-history
  ports:
    - name: history-ui
      port: 18080
      targetPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: spark
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
