base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-master-ui
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: spark-master.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-ui
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: spark-history.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history
                port:
                  number: 18080
